# haarcommon

./: CMakeLists.txt  detector.cpp  detector.h  haarwavelet.cpp  haarwavelet.h  haarwaveletevaluators.h  haarwaveletutilities.cpp  haarwaveletutilities.h  main.cpp
src/: CMakeLists.txt  haarwavelet.cpp  haarwavelet.h  haarwaveletevaluators.h  haarwaveletutilities.h
test/: CMakeLists.txt  haarwavelettest.cpp  integrals.ods
